<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menuCamera"
        android:title="@string/camera"
        android:icon="@drawable/ic_camera"
        app:showAsAction="always"/>

    <item android:id="@+id/menuSearch"
        android:title="@string/search"
        android:icon="@drawable/ic_searchmin"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item android:id="@+id/menuAdd"
        android:title="@string/add"
        android:icon="@drawable/ic_add"
        app:showAsAction="never"/>

    <item android:id="@+id/menuDelete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menuSlideshow"
        android:title="@string/slideshow"
        android:icon="@drawable/ic_picture"
        app:showAsAction="never"/>


    <item android:id="@+id/menuSearch_Advanced"
        android:title="@string/advance_search"
        app:showAsAction="never"/>

</menu>