<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/photo"
        android:title="@string/photo"
        android:icon="@drawable/ic_picture"
        android:iconTint="?attr/colorOnBackground"/>

    <item android:id="@+id/album"
        android:title="@string/album"
        android:icon="@drawable/ic_gallery"
        android:iconTint="?attr/colorOnBackground"/>

    <item android:id="@+id/scret"
        android:title="@string/secret"
        android:icon="@drawable/ic_secret"
        android:iconTint="?attr/colorOnBackground" />

    <item android:id="@+id/favorite"
        android:title="@string/favorite"
        android:icon="@drawable/ic_star"
        android:iconTint="?attr/colorOnBackground"/>


</menu>