<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favorite_item_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item android:id="@+id/favorite_item_slideshow"
        android:title="@string/slideshow"
        android:icon="@drawable/ic_add"
        app:showAsAction="never"/>

    <item android:id="@+id/favorite_item_add"
        android:title="@string/add"
        android:icon="@drawable/ic_add"
        app:showAsAction="never"/>

    <item android:id="@+id/favorite_item_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_add"
        app:showAsAction="never"/>
</menu>