<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/album_item_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/change_span_count"
        android:title="@string/search"
        android:icon="@drawable/ic_change_span_count"
        app:showAsAction="ifRoom|collapseActionView" />
    <item android:id="@+id/menuChoose"
        android:title="@string/choose"
        app:showAsAction="never"/>
    <item android:id="@+id/album_item_slideshow"
        android:title="@string/slideshow"
        app:showAsAction="never"/>

<!--    <item android:id="@+id/album_item_add"
        android:title="@string/add"
        android:icon="@drawable/ic_add"
        app:showAsAction="never"/>

    <item android:id="@+id/album_item_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_add"
        app:showAsAction="never"/>-->
</menu>